@@ -1,4 +1,9 @@
           CHANGES IN SOUNDGEN VERSION 2.0.1 [--date--]
+MINOR
+  * Switch from Seeing Speech to Hillenbrand 1995 for vowel centroids in formant_app()
+
+BUGS FIXED:
+  * vowel plot in formant_app()
 
           CHANGES IN SOUNDGEN VERSION 2.0.0 [15-March-2021]
 This version represents an attempt to standardize and better integrate all functions for acoustic analysis in the package. Functions for sound synthesis, notably soundgen(), are not affected by these structural changes and remain fully back-compatible.
